portainer/portainer-agent-demo-2/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer-agent-deploy
  namespace: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer-agent-app
  template:
    metadata:
      labels:
        app: portainer-agent-app
    spec:
      serviceAccountName: portainer-sa-clusteradmin
      containers:
      - name: portainer-agent
        image: portainer/agent:2.17.1
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
          protocol: TCP
