portainer/portainer-agent-demo-2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portainer-agent-service
  namespace: portainer
spec:
  type: ClusterIP
  selector:
    app: portainer-agent-app
  ports:
    - name: http
      protocol: TCP
      port: 9001
